// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component:MoreOrLess matches + Show NN more 1`] = `
<div>
  <ul>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="alpha"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfieldalpha"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfieldalpha"
      >
        alpha
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          99
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="beta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfieldbeta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfieldbeta"
      >
        beta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          99
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="gamma"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfieldgamma"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfieldgamma"
      >
        gamma
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          99
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="delta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfielddelta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfielddelta"
      >
        delta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          99
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="epsilon"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfieldepsilon"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfieldepsilon"
      >
        epsilon
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          99
        </span>
      </span>
    </li>
  </ul>
  <div>
    <button
      className="a-btn a-btn__link more"
      onClick={[Function]}
    >
      + Show 3 more
    </button>
  </div>
</div>
`;

exports[`component:MoreOrLess matches - Show NN less 1`] = `
<div>
  <ul>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="alpha"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfieldalpha"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfieldalpha"
      >
        alpha
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          99
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="beta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfieldbeta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfieldbeta"
      >
        beta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          99
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="gamma"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfieldgamma"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfieldgamma"
      >
        gamma
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          99
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="delta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfielddelta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfielddelta"
      >
        delta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          99
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="epsilon"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfieldepsilon"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfieldepsilon"
      >
        epsilon
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          99
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="zeta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfieldzeta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfieldzeta"
      >
        zeta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          99
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="eta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfieldeta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfieldeta"
      >
        eta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          99
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="theta"
        checked={false}
        className="flex-fixed a-checkbox"
        id="myfieldtheta"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="myfieldtheta"
      >
        theta
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          99
        </span>
      </span>
    </li>
  </ul>
  <div>
    <button
      className="a-btn a-btn__link more"
      onClick={[Function]}
    >
      - Show 3 less
    </button>
  </div>
</div>
`;
